# Ex03ProgramingTopics

./: .gitignore  CMakeLists.txt  README.MD  bonus.txt  main.cpp  maintest.sh  summation.py
HLD/: high_level_design.tex
HLD/Diagrams/: class_diagram.puml  sequence_diagram.puml
algorithm/Algo_323012971_315441972_Orignal/: CMakeLists.txt
algorithm/Algo_323012971_315441972_Orignal/include/: Algo_323012971_315441972_Orignal.hpp
algorithm/Algo_323012971_315441972_Orignal/src/: Algo_323012971_315441972_Orignal.cpp
algorithm/Algo_323012971_315441972_Simultaneous/: CMakeLists.txt
algorithm/Algo_323012971_315441972_Simultaneous/include/: Algo_323012971_315441972_Simultaneous.hpp
algorithm/AlgorithmA/src/: Algo_323012971_315441972_Simultaneous.cpp
algorithm/AlgorithmB/: CMakeLists.txt
algorithm/algorithmA/: CMakeLists.txt
algorithm/algorithmA/include/: BFSSimultaneousMappingAndCleaningAlgorithm.hpp
algorithm/algorithmA/src/: BFSSimultaneousMappingAndCleaningAlgorithm.cpp
algorithm/algorithmB/: CMakeLists.txt  main.cpp
algorithm/algorithmB/include/: BFSCleaingAfterMappingAlgorithm.hpp
algorithm/algorithmB/src/: BFSCleaingAfterMappingAlgorithm.cpp
algorithm/badAlgorithms/: CMakeLists.txt  empty.cpp  faultyAlgorithm.cpp  incorrectlyRegisterAlgorithm.cpp  throwsError.cpp  timingOut.cpp  timingOutSometimes.cpp  timingOutSometimesFaultySometimes.cpp
algorithm/commonAlgorithm/include/: MappingAlgorithm.hpp  MappingGraph.hpp
algorithm/commonAlgorithm/src/: MappingAlgorithm.cpp  MappingGraph.cpp
common/: AbstractAlgorithm.h  Direction.hpp
common/src/: Coordinate.cpp  HouseLocation.cpp
include/: AlgorithmConfig.hpp  AlgorithmFactory.hpp  BfsAlgorithem.hpp  CleaningRecord.hpp  CleaningRecordStep.hpp  MeteredVacuumBattery.hpp  OutFileWriter.hpp  Step.hpp  VacuumHouse.hpp  VacuumSimulator.hpp
include/MappingAlgorithm/: AbstractMappingAlgorithm.hpp  BFSCleaingAfterMappingAlgorithm.hpp  BFSSimultaneousMappingAndCleaningAlgorithm.hpp  MappingAlgorithm.hpp  MappingGraph.hpp  SimultaneousMappingCleaningAlgorithm.hpp
simulator/: .gitignore  BatchVacuumSimulator.cpp  CMakeLists.txt  CleaningRecord.cpp  MeteredVacuumBattery.cpp  OutFileWriter.cpp  README.MD  SimulationArguments.cpp  VacuumHouse.cpp  VacuumParser.cpp  VacuumSimulator.cpp  main.cpp
simulator/include/: BatchVacuumSimulator.hpp  CleaningRecord.hpp  CleaningRecordStep.hpp  MeteredVacuumBattery.hpp  OutFileWriter.hpp  ScoreCalculator.hpp  SimulationArguments.hpp  Simulator.hpp  VacuumHouse.hpp  VacuumPayload.hpp  VacuumSimulator.hpp
simulator/test/: BFSCleaingAfterMappingAlgorithmTest.cpp  BFSSimultaneousMappingAndCleaningAlgorithmTest.cpp  BatchVacuumSimulatorTest.cpp  OutFileWriterTest.cpp  VacuumParserTest.cpp  VacuumSimulatorTest.cpp
simulator/test/examples/cleaningTest/: house-big-1.house  house-empty-rows-counted-as-corridors.house  house-partial-exact-steps.house
simulator/test/examples/futileTest/: house-closedin-TODO REPLACE.txt  house-closedin2-BFSCleaingAfterMappingAlgorithm.txt  house-max0-BFSCleaingAfterMappingAlgorithm.txt  house-return-small-battery-BFSCleaingAfterMappingAlgorithm.txt
simulator/test/examples/gt/: house-big-1-libBFSCleaingAfterMappingAlgorithm.txt  house-big-1-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-big-libBFSCleaingAfterMappingAlgorithm.txt  house-big-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-bigEmpty-allFoundButSomeUndiscoverable-libBFSCleaingAfterMappingAlgorithm.txt  house-bigEmpty-libBFSCleaingAfterMappingAlgorithm.txt  house-bigEmpty-someUnmappable-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-coridors-libBFSCleaingAfterMappingAlgorithm.txt  house-coridors-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-empty-rows-counted-as-corridors-libBFSCleaingAfterMappingAlgorithm.txt  house-empty-rows-counted-as-corridors-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-libBFSCleaingAfterMappingAlgorithm.txt  house-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-linemappable-not-cleanable-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-maxsteps-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-narrow-exact-battery-andsteps-libBFSCleaingAfterMappingAlgorithm.txt  house-narrow-exact-battery-libBFSCleaingAfterMappingAlgorithm.txt  house-narrow-exact-battery-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-nodirt-libBFSCleaingAfterMappingAlgorithm.txt  house-partial-exact-steps-libBFSCleaingAfterMappingAlgorithm.txt  house-partial-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-return-small-battery2-libBFSCleaingAfterMappingAlgorithm.txt  house-sparse-libBFSCleaingAfterMappingAlgorithm.txt  house-sparse-libBFSSimultaneousMappingAndCleaningAlgorithm.txt  house-sparse2-libBFSSimultaneousMappingAndCleaningAlgorithm.txt
simulator/test/examples/mixFailerAndSuccesHouse/: house-big copy.house
simulator/test/examples/timeoutTests/: house-coridors copy 6.house
simulator/test/include/: SpecificAlgorithmTest.hpp
src/: CleaningRecord.cpp  OutFileWriter.cpp  VacuumSimulator.cpp
src/MappingAlgorithm/: AbstractMappingAlgorithm.cpp  BFSCleaingAfterMappingAlgorithm.cpp  BFSSimultaneousMappingAndCleaningAlgorithm.cpp  MappingAlgorithm.cpp  MappingGraph.cpp  SimultaneousMappingCleaningAlgorithm.cpp
test/: BFSCleaingAfterMappingAlgorithmTest.cpp  BFSSimultaneousMappingAndCleaningAlgorithmTest.cpp  CleaningRecordTest.cpp  MappingAlgorithmTest.cpp  OutFileWriterTest.cpp  SimultaneousMappingCleaningAlgorithmTest.cpp
test/examples/cleaningTest/: house-narrow-exact-battery-andsteps.txt  house-narrow-exact-battery.txt  house-sparse2.txt
